--- a/de-resume.html
+++ b/de-resume.html
@@ -465,11 +465,11 @@
               <option value="es-resume.html">🇪🇸 Español</option>
               <option value="fr-resume.html">🇫🇷 Français</option>
               <option value="it-resume.html">🇮🇹 Italiano</option>
-              <!---<option value="ru-resume.html">🇷🇺 Русский</option>
+              <option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="cn-resume.html">🇨🇳 中文</option>
               <option value="jp-resume.html">🇯🇵 日本語</option>
               <option value="kr-resume.html">🇰🇷 한국어</option>
-              <option value="ar-resume.html">🇸🇦 اللغة العربية</option>--->
+              <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
             </select>
           </span>
         </span>
@@ -490,11 +490,11 @@
       <div class="doc-section" id="education">
         <h3>Ausbildung</h3>
         <ul class="square">
-          <li>2017-2021 | <strong>PhD, Erneuerbare Energie </strong> (vollständig finanziert)<br />
+          <li><strong>PhD, Erneuerbare Energie </strong> (vollständig finanziert)<br />
             <strong><a href="https://ethz.ch/en.html" target="_blank">Eidgenössische Technische Hochschule
                 Zürich</a></strong>, Schweiz</p>
 
-          <li>2014-2016 | <strong>MSc, Materialien & Physik </strong>(EU-Doppelabschluss)<br />
+          <li><strong>MSc, Materialien & Physik </strong>(EU-Doppelabschluss)<br />
             <strong><a href="https://www.tum.de/en/" target="_blank">Technische Universität München</a></strong>,
             Deutschland<br /><strong><a href="https://www.lmu.de/en/" target="_blank">Ludwig-Maximilians-Universität
                 München</a></strong>, Deutschland<br /></p>
@@ -502,23 +502,23 @@
             Frankreich<br /></p>-->
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
 
-          <li>2009-2013 | <strong>BSc, Materialchemie</strong> (erteilte Patente)<br />
+          <li><strong>BSc, Materialchemie</strong> (erteilte Patente)<br />
             <strong><a href="http://en.bjtu.edu.cn/" target="_blank">Verkehrsuniversität Peking</a></strong>,
             China<br />
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
             <p>____</p>
-          <li>2023-2023 | <strong>Führungskräfteausbildung, Grüner Übergang</strong> (Stipendium)<br />
+          <li><strong>Führungskräfteausbildung, Grüner Übergang</strong> (Stipendium)<br />
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Wirtschaftsschule der Universität
                 Cambridge</a></strong>,
             Großbritannien<br />
-          <li>2020-2021 | <strong>MBA, Betriebswirtschaftslehre </strong>(teilzeit)<br />
+          <!-- <li><strong>MBA, Betriebswirtschaftslehre </strong>(teilzeit)<br />
             <strong><a href="https://quantic.edu/mba" target="_blank">Quantische Schule für Wirtschaft</a></strong>,
-            Washington D.C.<br /></p>
+            Washington D.C.<br /></p> -->
 
         </ul>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="academic-experience">
@@ -546,7 +546,7 @@
                 Röntgen-Freie-Elektronen-Laser-Anlage</a></strong>, Hamburg, Deutschland<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
