--- a/en-research.html
+++ b/en-research.html
@@ -1070,6 +1070,33 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
+      <div class="doc-section" id="exhibitions">
+        <h3>Tech Exhibitions</h3>
+        <ul class="square">
+          <li>
+            2024 | <strong>The Smarter E Europe</strong>, Munich, Germany<br>
+          </li>
+          <li>
+            2024 | <strong>World Hydrogen Summit & Exhibition</strong>, Rotterdam, Netherlands<br>
+          </li>
+          <li>
+            2024 | <strong>Hannover Messe: Empowering Sustainable Industry</strong>, Hannover, Germany<br>
+          </li>
+          <li>
+            2024 | <strong>Handwerk & Design München</strong>, Munich, Germany<br>
+          </li>
+          <li>
+            2023 | <strong>H2 & FC EXPO</strong>, Stuttgart, Germany<br>
+          </li>
+          <li>
+            2023 | <strong>IAA Mobility</strong>, Munich, Germany<br>
+          </li>
+        </ul>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
       <div class="doc-section" id="equity-research">
         <h3>Equity Research</h3>
         <ul class="square">
