--- a/en-resume.html
+++ b/en-resume.html
@@ -477,67 +477,67 @@
       <div class="doc-section" id="education" style="width:113%">
         <h3 style="display:inline-block">Education</h3>
         <ul class="square">
-          <li>2017-2021 | <strong>PhD, Renewable Energy </strong><br />
+          <li><strong>PhD, Renewable Energy </strong><br />
             <strong><a href="https://ethz.ch/en.html" target="_blank">Swiss Federal Institute of Technology - ETH
                 Zurich</a></strong>, Switzerland<br />
 
-          <li>2014-2016 | <strong>MSc, Materials & Physics </strong><br />
+          <li><strong>MSc, Materials & Physics </strong><br />
             <strong><a href="https://www.tum.de/en/" target="_blank">Technical University of Munich</a></strong>,
             Germany<br />
-            <strong><a href="https://www.lmu.de/en/" target="_blank">Ludwig Maximilian University of
-                Munich</a></strong>, Germany<br />
-            <!-- <strong><a href="https://www.univ-rennes1.fr/" target="_blank">University of Rennes</a></strong>, France
-            <br /> -->
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
+            <!-- <strong><a href="https://www.lmu.de/en/" target="_blank">Ludwig Maximilian University of
+                Munich</a></strong>, Germany<br /> -->
+            <strong><a href="https://www.univ-rennes1.fr/" target="_blank">University of Rennes</a></strong>, France
+            <br />
 
-          <li>2009-2013 | <strong>BSc, Materials Chemistry</strong><br />
+
+          <li><strong>BSc, Materials Chemistry</strong><br />
             <strong><a href="http://en.bjtu.edu.cn/" target="_blank">Beijing Transport University</a></strong>,
             China<br />
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
+
             <p>____</p>
-          <li>2023-2023 | <strong>Exec. Education, Green Transition</strong> (Scholarship)<br />
+          <li><strong>Exec. Education, Green Transition</strong> (Santander Scholarship)<br />
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">University of Cambridge - Judge Business
                 School</a></strong>,
             UK<br />
-          <li>2020-2021 | <strong>MBA, Business Administration </strong>(part-time)<br />
+          <!-- <li>2020-2021 | <strong>MBA, Business Administration </strong>(part-time)<br />
             <strong><a href="https://quantic.edu/mba" target="_blank">Quantic School of Business</a></strong>,
-            Washington D.C.<br /></p>
+            Washington D.C.<br /></p> -->
 
         </ul>
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="academic-experience">
         <h3 style="display:inline-block">Research Experience</h3>
         <ul class="square">
 
-          <li>2016-2021 | <strong>Doctoral Researcher, Hydrogen & Fuel Cells</strong>
+          <li><strong>Doctoral Researcher, Hydrogen & Fuel Cells</strong>
             <div style="float: right"></div><br>
             <strong><a href="https://psi.ch/en" target="_blank">Paul Scherrer Institute</a></strong>, ETH
             Domain, Switzerland
           </li>
-          <li>2015-2016 | <strong>Research Assistant, Semiconductors & Sensors</strong>
+          <li><strong>Research Assistant, Semiconductors & Sensors</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://tum.de" target="_blank">Technical University of Munich</a></strong>, Department of
             Physics, Germany
             <br>
           </li>
-          <li>2015-2015 | <strong>Intern, Water Environment & Pollution Modeling</strong>
+          <li><strong>Intern, Water Environment & Pollution Modeling</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://enpc.fr" target="_blank">Institut Polytechnique de Paris</a></strong>, ENPC,
             France<br>
           </li>
-          <li>2015-2015 | <strong>Intern, Materials Imaging & Dynamics</strong>
+          <li><strong>Intern, Materials Imaging & Dynamics</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://xfel.eu" target="_blank">European X-Ray Free-Electron Laser Facility</a></strong>,
             Hamburg, Germany<br>
           </li>
         </ul>
       </div>
-
+ -->
 
 
 
@@ -588,7 +588,7 @@
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="industrial-experience">
@@ -597,9 +597,6 @@
 
         <ul class="square">
 
-          <!-- <li>2021-至今 | <strong>研发工程师, 燃料电池系统策略 </strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://www.freudenberg-eps.com/" target="_blank">德国 · 科德宝集团</a></strong> (动力系统)<br> -->
 
           <li>2017-2019 | <strong>Co-author/Collaborator, Automotive Fuel Cell Materials </strong>
             <div style="float: right"></div><br>
@@ -607,37 +604,10 @@
           <li>2015-2016 | <strong>Internship, Chip Failure Analysis</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://infineon.com" target="_blank">Infineon Technologies</a></strong>, Germany<br>
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
 
         </ul>
-      </div>
+      </div> -->
 
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-      <div class="doc-section" id="exhibitions">
-        <h3>Tech Exhibitions</h3>
-        <ul class="square">
-          <li>
-            2024 | <strong>The Smarter E Europe</strong>, Munich, Germany<br>
-          </li>
-          <!-- <li>
-            2024 | <strong>World Hydrogen Summit & Exhibition</strong>, Rotterdam, Netherlands<br>
-          </li>
-          <li>
-            2024 | <strong>Hannover Messe: Empowering Sustainable Industry</strong>, Hannover, Germany<br>
-          </li> -->
-          <li>
-            2024 | <strong>Handwerk & Design München</strong>, Munich, Germany<br>
-          </li>
-          <!-- <li>
-            2023 | <strong>H2 & FC EXPO</strong>, Stuttgart, Germany<br>
-          </li> -->
-          <li>
-            2023 | <strong>IAA Mobility</strong>, Munich, Germany<br>
-          </li>
-        </ul>
-      </div>
 
 
 
@@ -729,8 +699,6 @@
           </li>
         </ul>
       </div>
-
-
 
 
 
