--- a/ru-1p.html
+++ b/ru-1p.html
@@ -194,7 +194,7 @@
       <div>
         <a class='slide' href='#'>
           <span class='element'>X</span>
-          <span class='name'>Хун</span>
+          <span class='name'>Хонг</span>
         </a>
       </div>
       <div>
@@ -274,7 +274,7 @@
         <h3 id="logo" style="text-align:center;">
           <img id="optionalstuff" src="images/hong8.png" width="155" />
           <div style="margin-bottom: 16px;"></div>
-          <h3 class="hidden-mobile" align="left">Хун Сюй</h3>
+          <h3 class="hidden-mobile" align="left">Хонг Сюй</h3>
 
           <ul>
             <span style="display: block; height: 6px;"></span>
@@ -412,7 +412,7 @@
 
       <div class="topnav">
         <a href="ru.html" class="active">
-          <h3 class="display-mobile">Доктор Хун Сюй</h3>
+          <h3 class="display-mobile">Доктор Хонг Сюй</h3>
         </a>
         <div id="myLinks">
           <ul>
@@ -485,7 +485,7 @@
       <p align="justify">
         <span class="display-mobile">Добро пожаловать, друзья из <span id="location2">всего мира</span> :-)</br></br></span>
 
-      В настоящее время доктор Хун Сюй занимает должность <strong>инженера по НИОКР</strong>, специализирующегося на <strong>системах электропитания</strong> с местом работы в Мюнхене, посвятив себя достижению углеродной нейтральности в секторах <strong>энергетики</strong> и <strong>транспорта</strong>. За время своей карьеры он сотрудничал с международными корпорациями и академическими учреждениями в Европе и Китае, опубликовав более <strong>15 научных статей</strong> с почти <strong>300 цитированиями</strong> и получив <strong>3 патента</strong>. Кроме того, он возглавлял сессию на <strong><a href="https://unfccc.int/" target="_blank">Конференции ООН по изменению климата</a></strong> в Бонне, участвовал в Группе экспертов <strong><a href="https://unece.org/" target="_blank">Экономической комиссии ООН для Европы</a></strong> в Женеве и был членом <strong>академического жюри</strong> на <strong><a href="https://symposium.org/" target="_blank">Симпозиуме в Санкт-Галлене</a></strong> в Швейцарии. Доктор Шу также является рецензентом для нескольких высокоценных журналов в области <strong>энергетики</strong>, <strong>транспорта</strong> и <strong>устойчивого развития</strong>. Его междисциплинарные усилия были отмечены наградами, включая стипендию Сантандер Банк, приглашение на ECS и стипендию на путешествие, стипендию Intel Edge AI, стипендию Эразмус и другие.
+      В настоящее время доктор Хонг Сюй занимает должность <strong>инженера по НИОКР</strong>, специализирующегося на <strong>системах электропитания</strong> с местом работы в Мюнхене, посвятив себя достижению углеродной нейтральности в секторах <strong>энергетики</strong> и <strong>транспорта</strong>. За время своей карьеры он сотрудничал с международными корпорациями и академическими учреждениями в Европе и Китае, опубликовав более <strong>15 научных статей</strong> с почти <strong>300 цитированиями</strong> и получив <strong>3 патента</strong>. Кроме того, он возглавлял сессию на <strong><a href="https://unfccc.int/" target="_blank">Конференции ООН по изменению климата</a></strong> в Бонне, участвовал в Группе экспертов <strong><a href="https://unece.org/" target="_blank">Экономической комиссии ООН для Европы</a></strong> в Женеве и был членом <strong>академического жюри</strong> на <strong><a href="https://symposium.org/" target="_blank">Симпозиуме в Санкт-Галлене</a></strong> в Швейцарии. Доктор Шу также является рецензентом для нескольких высокоценных журналов в области <strong>энергетики</strong>, <strong>транспорта</strong> и <strong>устойчивого развития</strong>. Его междисциплинарные усилия были отмечены наградами, включая стипендию Сантандер Банк, приглашение на ECS и стипендию на путешествие, стипендию Intel Edge AI, стипендию Эразмус и другие.
     </p>
     
     <p align="justify">
@@ -1409,7 +1409,7 @@
       <hr class="large" />
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
         используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016-
-          <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
+          <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хонг Сюй |
           Обновлено: 03.2023
         </small>
 
