--- a/en.html
+++ b/en.html
@@ -406,12 +406,12 @@
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <!---<option value="ru.html">Русский</option>
+            <!-- <option value="ru.html">Русский</option>
             <option value="cn.html">中文</option>
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
-            --->
+            <option value="ar.html">اللغة العربية</option> -->
+            
           </select>
         </span>
       </h3>
@@ -503,12 +503,12 @@
               <option value="es.html">🇪🇸 Español</option>
               <option value="fr.html">🇫🇷 Français</option>
               <option value="it.html">🇮🇹 Italiano</option>
-              <!---<option value="ru.html">🇷🇺 Русский</option>
+              <!-- <option value="ru.html">🇷🇺 Русский</option>
               <option value="cn.html">🇨🇳 中文</option>
               <option value="jp.html">🇯🇵 日本語</option>
               <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
-              --->
+              <option value="ar.html">🇸🇦 اللغة العربية</option> -->
+              
             </select>
           </span>
         </span>
@@ -517,52 +517,24 @@
       <p align="justify">
         <span class="display-mobile">Greetings, friends from <span id="location2">the World</span>! <br><br></span>
 
-        Currently, Dr. Hong Xu is a dedicated <strong>Researcher</strong> and <strong>Engineer</strong> specializing in
-        <strong>Renewable Energy</strong> and <strong>e-Power Systems</strong>, striving for Efficiency Excellence and
-        Carbon Neutrality within the Energy and Transport sectors. Over the past 10 years, he has worked with
-        multinational corporations and leading institutions across the Eurasian continent, driving technical
-        advancements in <strong>e-Mobility</strong>, <strong>Clean Energy</strong>, and <strong>New Materials</strong>
-        industries with <strong><span class="no_of_papers"></span> papers</strong> published and <strong><span
-            class="no_of_patents"></span>
-          patents</strong> granted. Alongside his
-        engineering pursuits, he has
-        engaged with renowned organizations, notably St. Gallen Symposium, Salzburg Global Seminar, CITIC Securities,
-        and Oxford Institute for Energy Studies, focusing on Clean <strong>Energy Economics and Policy</strong> analysis
-        in Asia and
-        Europe. As a proactive contributor to international development, Dr. Xu has served as Group of Experts (GE)
-        Member at
-        the <strong><a href="https://unece.org/" target="_blank">UN Economic Commission
-            for Europe</a></strong> (UNECE) in Geneva, and chaired parallel sessions at the <strong><a
-            href="https://unfccc.int/" target="_blank">UN Climate Change Conference</a></strong> (UNFCCC) in Bonn,
-        advocating for <strong><a href="https://sdgs.un.org/goals" target="_blank">UN Sustainable Development
-            Goals</a></strong> (SDGs) <strong>7 </strong>(Affordable Energy), <strong>9 </strong>(Industry Innovation),
-        and
-        <strong>13 </strong>(Climate Action).
+         Energy powers human civilization, and energy materials tackle the challenges of <strong>energy security</strong> and <strong>climate change</strong>, catalyzing the radical AI-driven industrial revolution. At the interplay of <strong>Innovation</strong>–<strong>Integration</strong>-<strong>Intelligence</strong>, Dr. Hong Xu is dedicated to advance critical materials for e-power systems and smart grid applications, including
+         solar cells, lithium-ion batteries, electrolyzers, and hydrogen fuel cells.
+          By reforming functional materials and device architectures, his work enhances energy <strong>efficiency</strong>, materials <strong>durability</strong>, and the lab-to-market <strong>scalability</strong> of sustainable energy systems. His efforts have been rewarded with
+          <strong><span class="no_of_papers"></span></strong> publications, <strong><span class="no_of_patents"></span></strong> Chinese patents granted, and
+          <strong><span class="no_of_patents_in_review"></span></strong> EU patents filed, in collaboration with global institutions. Notably, his systematic work in X-ray tomography for fuel cell studies achieved <strong>cutting-edge</strong> temporal (0.1 s) and spatial (0.4 μm) resolution worldwide, leveraging joint efforts with <strong><a href="https://global.toyota/en/" target="_blank">Toyota Central R&D Labs</a></strong> for imaging system and materials validation, and <strong><a href="https://www.cwi.nl/" target="_blank">CWI Amsterdam</a></strong> for deep learning algorithm optimization. This milestone was highlighted by the <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institute</a></strong> and presented at ECS in Atlanta as invited talk with travel grant. 
+       <br><br> 
+          A scholar by heart, he earned his PhD in <strong>Renewable Energy</strong> from 
+          <strong><a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a></strong>, fully funded by the SNSF. Prior to that, he obtained dual MSc degrees in
+          <strong>Materials Science</strong> and  <strong>Physics</strong>, jointly awarded by the <strong><a href="https://tum.de" target="_blank">Technical University of Munich</a></strong> and the <strong><a href="https://univ-rennes.fr" target="_blank">University of Rennes</a></strong>, supported by an Erasmus Scholarship. 
+          <!-- Beyond scientific world, he received an MBA fellowship from the <strong><a href="https://www.cdi.fr/en/" target="_blank">Collège des Ingénieurs</a></strong> and trained at the <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Cambridge Judge Business School</a></strong> with Santander Bank Scholarship.  -->
+          In pursuit of impactful scientific and policy research, he gained practical experience both in academia at the <strong><a href="https://oxfordenergy.org" target="_blank">Oxford Institute for Energy Studies</a></strong>, <strong><a href="https://xfel.eu" target="_blank">European XFEL</a></strong>, and <strong><a href="https://ecoledesponts.fr/" target="_blank">Polytechnic  Institute of Paris</a></strong>, and in industry at <strong>Toyota</strong>, <strong>Infineon</strong>, and <strong>Freudenberg</strong>. His academic journey began at <strong><a href="https://en.bjtu.edu.cn/" target="_blank">Beijing Transport University</a></strong>, where he studied Materials Chemistry with an innovation scholarship, and trained at the Institute for Process Engineering of the Chinese Academy of Sciences.
+        </p>
 
-      <p align="justify">
-        A scholar by heart, he pursued his PhD in <strong>Renewable Energy</strong> from <strong><a
-            href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a></strong>, in collaboration with the <strong><a
-            href="https://psi.ch" target="_blank">Paul Scherrer Institute</a></strong> in Switzerland. Prior to that, he
-        received an MSc in Materials Science from the <strong><a href="https://tum.de" target="_blank">Technical
-            University of
-            Munich</a></strong> with internships at the <strong><a href="https://xfel.eu" target="_blank">European
-            XFEL</a></strong> and <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> in
-        Germany. His passion for impactful research has led to long-term engagement with industry leaders in
-        hydrogen and fuel cells, including <strong>Toyota Motor</strong> in Japan and <strong>Freudenberg Group</strong>
-        in Germany. In pursuit of interdisciplinary horizons, he earned an <strong>MBA</strong> at the <strong><a
-            href="https://quantic.edu/mba" target="_blank">Quantic School of Business</a></strong> with further
-        Executive Education at the <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Cambridge Judge Business
-            School</a></strong>, gaining
-        practical experience at dual-currency venture capital firm and leading securities company in China.
-      </p>
-
-
-      <p style="text-align:left;">
-
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
-
-      </p>
+        <p style="text-align:left;">
+          PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
+            class="flag-icon" src="" alt=""> ?
+          </span>
+        </p>
 
       <!---
          <p class="display-mobile" style="text-align:left; padding: 0px; margin: 0px;">
@@ -627,54 +599,54 @@
 
         <div class="slideshow-container">
 
-          <div class="mySlides fade">
+          <!-- <div class="mySlides fade">
             <div class="numbertext"></div>
             <img class="hidden-mobile" src="images/sdg/slider_sdg_en.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg_en_mobi.webp" style="width:100%">
             <div class="text"></div>
-          </div>
+          </div> -->
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg7_en.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg7_en.png" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg7_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
-          <div class="mySlides fade">
+          <!-- <div class="mySlides fade">
             <div class="numbertext"></div>
             <img class="hidden-mobile" src="images/sdg/slider_sdg8_en.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg8_en_mobi.webp" style="width:100%">
             <div class="text"></div>
-          </div>
+          </div> -->
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg9_en.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg9_en.png" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg9_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg11_en.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg11_en.png" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg11_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg13_en.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg13_en.png" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg13_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
-          <div class="mySlides fade">
+          <!-- <div class="mySlides fade">
             <div class="numbertext"></div>
             <img class="hidden-mobile" src="images/sdg/slider_sdg14_en.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg14_en_mobi.webp" style="width:100%">
             <div class="text"></div>
-          </div>
+          </div> -->
 
           <a class="prev" onclick="plusSlides(-1)">❮</a>
           <a class="next" onclick="plusSlides(1)">❯</a>
