--- a/ru-research.html
+++ b/ru-research.html
@@ -194,7 +194,7 @@
       <div>
         <a class='slide' href='#'>
           <span class='element'>X</span>
-          <span class='name'>Хун</span>
+          <span class='name'>Хонг</span>
         </a>
       </div>
       <div>
@@ -295,7 +295,7 @@
         <h3 id="logo" style="text-align:center;">
           <img id="optionalstuff" src="images/banner_cns4_left.gif" width="155" />
           <div style="margin-bottom: 16px;"></div>
-          <h3 class="hidden-mobile" align="left">Хун Сюй</h3>
+          <h3 class="hidden-mobile" align="left">Хонг Сюй</h3>
 
           <ul>
             <span style="display: block; height: 6px;"></span>
@@ -360,7 +360,7 @@
 
       <div class="topnav">
         <a href="ru-research.html" class="active">
-          <h3 class="display-mobile">Доктор Хун Сюй</h3>
+          <h3 class="display-mobile">Доктор Хонг Сюй</h3>
         </a>
         <div id="myLinks">
           <ul>
@@ -834,7 +834,7 @@
         <ol>
           <li>
             <strong>Кольцевое устройство для магнитной сепарации на газожидкостном интерфейсе [P]</strong><br>
-            Изобретатели: профессор Фу Мин, профессор Чжан Хуэй, <strong>Сюй Хун</strong> [BJTU], профессор Янь
+            Изобретатели: профессор Фу Мин, профессор Чжан Хуэй, <strong>Сюй Хонг</strong> [BJTU], профессор Янь
             Лутин<br>
             2013 | Китайский патент на изобретение номер: CN102441489B, дата вступления в силу: 10/2013. [<a
               href="https://patents.google.com/patent/CN102441489B/en" target="_blank">Патентный документ</a>]
@@ -842,7 +842,7 @@
           <li>
             <strong>Контролируемое кольцевое устройство для непрерывной магнитной сепарации на газожидкостном интерфейсе
               [P]</strong><br>
-            Изобретатели: профессор Чжан Хуэй, <strong>Сюй Хун</strong> [BJTU], профессор Фу Мин, профессор Янь
+            Изобретатели: профессор Чжан Хуэй, <strong>Сюй Хонг</strong> [BJTU], профессор Фу Мин, профессор Янь
             Лутин<br>
             2013 | Китайский патент на изобретение номер: CN102441490A, дата вступления в силу: 11/2013. [<a
               href="https://patents.google.com/patent/CN102441490A/en" target="_blank">Патентный документ</a>]
@@ -850,7 +850,7 @@
           <li>
             <strong>Ультразвуковое устройство для мытья фруктов и овощей с фотокаталитическим окислением
               [P]</strong><br>
-            Изобретатели: Чжоу Синчжэнь, <strong>Сюй Хун</strong> [BJTU], профессор Цзян Хун, Ци Сяоюэ<br>
+            Изобретатели: Чжоу Синчжэнь, <strong>Сюй Хонг</strong> [BJTU], профессор Цзян Хонг, Ци Сяоюэ<br>
             2012 | Китайский патент на полезную модель номер: CN202311136U, дата вступления в силу: 05/2012. [<a
               href="https://patents.google.com/patent/CN202311136U/en" target="_blank">Патентный документ</a>]
           </li>
@@ -1240,7 +1240,7 @@
       <hr class="large" />
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
         используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016 -
-          <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
+          <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хонг Сюй |
           Обновлено: <span class="web_update_month"></span>. <span class="web_update_year"></span> г.
         </small>
       </p>
