--- a/ru-resume.html
+++ b/ru-resume.html
@@ -195,7 +195,7 @@
       <div>
         <a class='slide' href='#'>
           <span class='element'>X</span>
-          <span class='name'>Хун</span>
+          <span class='name'>Хонг</span>
         </a>
       </div>
       <div>
@@ -296,7 +296,7 @@
         <h3 id="logo" style="text-align:center;">
           <img id="optionalstuff" src="images/banner_cns5_left.gif" width="155" />
           <div style="margin-bottom: 16px;"></div>
-          <h3 class="hidden-mobile" align="left">Хун Сюй</h3>
+          <h3 class="hidden-mobile" align="left">Хонг Сюй</h3>
 
           <ul>
             <span style="display: block; height: 6px;"></span>
@@ -361,7 +361,7 @@
 
       <div class="topnav">
         <a href="ru-resume.html" class="active">
-          <h3 class="display-mobile">Доктор Хун Сюй</h3>
+          <h3 class="display-mobile">Доктор Хонг Сюй</h3>
         </a>
         <div id="myLinks">
           <ul>
@@ -455,7 +455,7 @@
 
       <div>
         <p class="hidden-mobile" align="justify">
-          В настоящее время доктор Хун Сюй работает в немецкой промышленности как инженер-эксперт в области
+          В настоящее время доктор Хонг Сюй работает в немецкой промышленности как инженер-эксперт в области
           <strong>новых энергетических систем</strong>, стремясь к достижению <strong>углеродной нейтрализации</strong>
           в области <strong>энергетики и транспорта</strong>.
         </p>
@@ -858,7 +858,7 @@
       <hr class="large" />
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
         используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016 -
-          <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
+          <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хонг Сюй |
           Обновлено: <span class="web_update_month"></span>. <span class="web_update_year"></span> г.
         </small>
       </p>
