--- a/en-activities.html
+++ b/en-activities.html
@@ -518,6 +518,8 @@
         <h3>Visiting</h3>
         <ul class="square">
           <li><strong>Int'l Organizations: </strong><br>
+            2025 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>United Nations University
+            </strong> (Tokyo, Japan)<br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>United Nations in Geneva
             </strong> (Geneva, Switzerland)<br>
             2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>International Renewable Energy
