--- a/de-resume.html
+++ b/de-resume.html
@@ -465,11 +465,11 @@
               <option value="es-resume.html">🇪🇸 Español</option>
               <option value="fr-resume.html">🇫🇷 Français</option>
               <option value="it-resume.html">🇮🇹 Italiano</option>
-              <option value="ru-resume.html">🇷🇺 Русский</option>
+              <!-- <option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="cn-resume.html">🇨🇳 中文</option>
               <option value="jp-resume.html">🇯🇵 日本語</option>
               <option value="kr-resume.html">🇰🇷 한국어</option>
-              <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-resume.html">🇸🇦 اللغة العربية</option> -->
             </select>
           </span>
         </span>
