--- a/de.html
+++ b/de.html
@@ -482,11 +482,11 @@
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <!-- <option value="ru.html">Русский</option>
             <option value="cn.html">中文</option>
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar.html">اللغة العربية</option> -->
             
           </select>
         </span>
@@ -576,11 +576,11 @@
               <option value="es.html">🇪🇸 Español</option>
               <option value="fr.html">🇫🇷 Français</option>
               <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <!-- <option value="ru.html">🇷🇺 Русский</option>
               <option value="cn.html">🇨🇳 中文</option>
               <option value="jp.html">🇯🇵 日本語</option>
               <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar.html">🇸🇦 اللغة العربية</option> -->
             </select>
           </span>
         </span>
