--- a/es.html
+++ b/es.html
@@ -433,11 +433,11 @@
             <option value="en.html">English</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <!-- <option value="ru.html">Русский</option>
             <option value="cn.html">中文</option>
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar.html">اللغة العربية</option> -->
             
           </select>
         </span>
@@ -529,11 +529,11 @@
               <option value="en.html">🇬🇧 English</option>
               <option value="fr.html">🇫🇷 Français</option>
               <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <!-- <option value="ru.html">🇷🇺 Русский</option>
               <option value="cn.html">🇨🇳 中文</option>
               <option value="jp.html">🇯🇵 日本語</option>
               <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar.html">🇸🇦 اللغة العربية</option> -->
 
             </select>
           </span>
