--- a/ar.html
+++ b/ar.html
@@ -362,52 +362,48 @@
 
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_ar3.gif" width="800" alt="banner Image" />
+
+        
         <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
-        <!-- <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div> -->
+        <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
         <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
         <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
         <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
         <div class="orange-dot" alt="DC" style="top: 44.9%; left: 18%;"></div>
         <div class="red-dot" alt="Oxford" style="top: 31.3%; left: 51.6%;"></div>
+
+
         <div class="tooltip" style="top:50%; left: 65%;">
           <h6><img src="images/flag_de.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Hamburg, Germany</h6>
-          <p>2015 EuXFEL Internship</p>
         </div>
         <div class="tooltip" style="top:54%; left:41%;">
           <h6><img src="images/flag_fr.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Paris, France</h6>
-          <p>2015 ENPC Internship</p>
         </div>
         <div class="tooltip" style="top:60%; left: 70%;">
           <h6><img src="images/flag_de.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Munich, Germany</h6>
-          <p>2015-16 MSc TUM & LMU</p>
-          <p>2021-23 R&D Engineer</p>
         </div>
         <div class="tooltip" style="top:58%; left: 39%;">
           <h6><img src="images/flag_fr.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Rennes, France</h6>
-          <p>2014-15 MSc UR1</p>
         </div>
         <div class="tooltip" style="top:64%; left:68%;">
           <h6><img src="images/flag_ch.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Zurich, Switzerland</h6>
-          <p>2017-21 PhD ETH</p>
-          <p>2016-21 Researcher PSI</p>
         </div>
         <div class="tooltip" style="top:60%; left: 80%;">
           <h6><img src="images/flag_cn.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Beijing, China</h6>
-          <p>2009-13 BSc BJTU</p>
         </div>
         <div class="tooltip" style="top:80%; left: 80%;">
           <h6><img src="images/flag_cn.png" alt="Flagge"
@@ -419,7 +415,6 @@
           <h6><img src="images/flag_us.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Washington DC, USA</h6>
-          <p>2019-21 QSB MBA</p>
         </div>
       </div>
 
@@ -552,41 +547,17 @@
         <span class="display-mobile" style="text-align: left;">مرحبًا، أصدقاء من <span
             id="location2">العالم</span>!</br></br></span>
 
-        حاليًا، الدكتور هونغ شو هو <strong>باحث</strong> و <strong>مهندس</strong> ملتزم، متخصص في
-        <strong>الطاقة المتجددة</strong> و <strong>أنظمة الطاقة الإلكترونية</strong>، يسعى لتحقيق
-        <strong>التميز في الكفاءة</strong> و <strong>الحياد الكربوني</strong> في قطاعات الطاقة والنقل.
-        على مدى السنوات العشر الماضية، عمل مع
-        الشركات المتعددة الجنسيات والمؤسسات الرائدة عبر القارة الأوراسية، مما دفع بالتقدم
-        التقني في الصناعات المتعلقة بـ <strong>التنقل الإلكتروني</strong> و <strong>الطاقة النظيفة</strong> و
-        <strong>المواد الجديدة</strong>
-        مع <strong><span class="no_of_papers"></span> مقالات</strong> منشورة و <strong><span
-            class="no_of_patents"></span>
-          براءات اختراع</strong> مُنحت. بالإضافة إلى أنشطته الهندسية، تعاون الدكتور شو
-        مع منظمات مرموقة، بما في ذلك ندوة سانت غالن، والندوة العالمية في سالزبورغ، وأوراق مالية CITIC،
-        ومعهد أكسفورد لدراسات الطاقة، مع التركيز على تحليل <strong>اقتصاديات الطاقة النظيفة والسياسات</strong>
-        في آسيا و
-        أوروبا. كإسهام نشط في التنمية الدولية، شغل الدكتور شو منصب عضو في مجموعة الخبراء (GE) في
-        <strong><a href="https://unece.org/" target="_blank">اللجنة الاقتصادية للأمم المتحدة
-            لأوروبا</a></strong> (UNECE) في جنيف، وترأس جلسات متوازية في <strong><a href="https://unfccc.int/"
-            target="_blank">مؤتمر الأمم المتحدة لتغير المناخ</a></strong> (UNFCCC) في بون،
-        مدافعًا عن <strong><a href="https://sdgs.un.org/goals" target="_blank">أهداف التنمية المستدامة للأمم
-            المتحدة</a></strong> (ODD) <strong>7</strong> (الطاقة الميسورة)، <strong>9</strong> (ابتكار الصناعة)،
-        و<strong>13</strong> (العمل المناخي).
-
-      <p align="justify">
-        باحث في العمق، حصل على درجة الدكتوراه في <strong>الطاقة المتجددة</strong> من <strong><a
-            href="https://ethz.ch/en.html" target="_blank">المعهد الفيدرالي السويسري للتكنولوجيا في زيورخ</a></strong>،
-        بالتعاون مع <strong><a href="https://psi.ch" target="_blank">معهد بول شيرر</a></strong> في سويسرا. قبل ذلك، حصل
-        على درجة الماجستير في علوم المواد من <strong><a href="https://tum.de" target="_blank">الجامعة التقنية في
-            ميونيخ</a></strong> مع تدريبات في <strong><a href="https://xfel.eu" target="_blank">XFEL
-            الأوروبي</a></strong> و<strong><a href="https://infineon.com" target="_blank">إنفينيون</a></strong> في
-        ألمانيا. قاد شغفه بالبحث المؤثر إلى انخراط طويل الأمد مع قادة الصناعة في
-        الهيدروجين وخلايا الوقود، بما في ذلك <strong>تويوتا موتور</strong> في اليابان و<strong>مجموعة فريدنبرغ</strong>
-        في ألمانيا. سعيًا نحو آفاق متعددة التخصصات، حصل على <strong>ماجستير إدارة الأعمال</strong> من <strong><a
-            href="https://quantic.edu/mba" target="_blank">مدرسة كوانتيك للأعمال</a></strong> مع مزيد من
-        التعليم التنفيذي في <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">كلية كيمبردج
-            للأعمال</a></strong>، مكتسبًا
-        خبرة عملية في شركة رأس المال المغامر ذات العملتين وشركة الأوراق المالية الرائدة في الصين.
+            الطاقة تدفع الحضارة البشرية، وتتعامل المواد الطاقية مع تحديات <strong>الأمن الطاقي</strong> و<strong>تغير المناخ</strong>، مما يحفز الثورة الصناعية الجذرية المدفوعة بالذكاء الاصطناعي. عند تقاطع <strong>الابتكار</strong>–<strong>التكامل</strong>–<strong>الذكاء</strong>، يكرس الدكتور هونغ شو جهوده لتطوير المواد الحيوية لأنظمة الطاقة الكهربائية وتطبيقات الشبكات الذكية، بما في ذلك الخلايا الشمسية، وبطاريات الليثيوم أيون، والمحللات الكهربائية، وخلايا الوقود الهيدروجينية.
+            من خلال إعادة تصميم المواد الوظيفية وبُنى الأجهزة، يعزز عمله <strong>الكفاءة</strong> الطاقية، و<strong>متانة</strong> المواد، و<strong>قابلية التوسع</strong> من المختبر إلى السوق للأنظمة الطاقية المستدامة. وقد كُرّمت جهوده بـ
+            <strong><span class="no_of_papers"></span></strong> منشورات و<strong><span class="no_of_patents_sum"></span></strong> براءات اختراع (ممنوحة/مقدمة) تتناول الانتقال الأخضر، بالتعاون مع مؤسسات عالمية. ومن الجدير بالذكر أن عمله المنهجي في التصوير المقطعي بالأشعة السينية لدراسة خلايا الوقود حقق دقة <strong>متقدمة</strong> زمنية (0.1 ثانية) ومكانية (0.4 ميكرومتر) على مستوى العالم، مستفيدًا من الجهود المشتركة مع <strong><a href="https://global.toyota/en/" target="_blank">مختبرات البحث والتطوير المركزية لشركة تويوتا</a></strong> لأبحاث المواد الحيوية، و<strong><a href="https://psi.ch/sls/tomcat/" target="_blank">مصدر الضوء السويسري</a></strong> لتطوير التصوير رباعي الأبعاد. وقد تم تسليط الضوء على هذا الإنجاز من قبل <strong><a href="https://psi.ch" target="_blank">معهد بول شيرير</a></strong> وعرضه في مؤتمر ECS في أتلانتا كعرض مدعو مع منحة سفر.
+         <br><br> 
+            عالم بالروح، حصل على درجة <strong>الدكتوراه في الطاقة المتجددة</strong> من 
+            <strong><a href="https://ethz.ch/en.html" target="_blank">المعهد الفدرالي السويسري للتكنولوجيا في زيورخ</a></strong>، بتمويل كامل من SNSF. قبل ذلك، حصل على درجتي ماجستير في
+            <strong>علوم المواد</strong> و<strong>الفيزياء</strong>، مُنحتا بشكل مشترك من <strong><a href="https://tum.de/en" target="_blank">الجامعة التقنية في ميونيخ</a></strong> و<strong><a href="https://univ-rennes.fr" target="_blank">جامعة رين</a></strong>، بدعم من منحة إيراسموس.
+            <!-- بعيدًا عن العالم العلمي، حصل على زمالة ماجستير إدارة الأعمال من <strong><a href="https://www.cdi.fr/en/" target="_blank">كلية المهندسين</a></strong> وتدرب في <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">مدرسة كامبريدج جادج للأعمال</a></strong> بمنحة بنك سانتاندر. -->
+            في سعيه للبحث العلمي والسياسي ذي التأثير، اكتسب خبرة عملية في الأكاديميا في 
+            <!-- <strong><a href="https://oxfordenergy.org" target="_blank">معهد أكسفورد لدراسات الطاقة</a></strong>, -->
+            <strong><a href="https://xfel.eu" target="_blank">XFEL الأوروبي</a></strong>, <strong><a href="https://lmu.de/en" target="_blank">جامعة ميونيخ</a></strong> و<strong><a href="https://ecoledesponts.fr/" target="_blank">المعهد البوليتكنيكي في باريس</a></strong>، وفي الصناعة في <strong>تويوتا</strong> و<strong>إنفينيون</strong> و<strong>فرويدنبرغ</strong>. بدأت رحلته الأكاديمية في <strong><a href="https://en.bjtu.edu.cn/" target="_blank">جامعة بكين للنقل</a></strong>، حيث درس كيمياء المواد بمنحة الابتكار، وتدرب في <strong><a href="http://english.ipe.cas.cn/" target="_blank">الأكاديمية الصينية للعلوم</a></strong>.
       </p>
 
 
