--- a/en.html
+++ b/en.html
@@ -344,50 +344,41 @@
           <h6><img src="images/flag_de.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Hamburg, Germany</h6>
-          <p>2015</p>
         </div>
         <div class="tooltip" style="top:54%; left:41%;">
           <h6><img src="images/flag_fr.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Paris, France</h6>
-          <p>2015</p>
         </div>
         <div class="tooltip" style="top:60%; left: 70%;">
           <h6><img src="images/flag_de.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Munich, Germany</h6>
-          <p>2015-16</p>
-          <p>2021-24</p>
         </div>
         <div class="tooltip" style="top:58%; left: 39%;">
           <h6><img src="images/flag_fr.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Rennes, France</h6>
-          <p>2014-15</p>
         </div>
         <div class="tooltip" style="top:64%; left:68%;">
           <h6><img src="images/flag_ch.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Zurich, Switzerland</h6>
-          <p>2016-21</p>
         </div>
         <div class="tooltip" style="top:60%; left: 80%;">
           <h6><img src="images/flag_cn.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Beijing, China</h6>
-          <p>2009-13</p>
         </div>
         <div class="tooltip" style="top:80%; left: 80%;">
           <h6><img src="images/flag_cn.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Anqing, China</h6>
-          <p>1993–2009</p>
         </div>
         <div class="tooltip" style="top:55%; left: 37%;">
           <h6><img src="images/flag_us.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Washington DC, USA</h6>
-          <p>2019-21</p>
         </div>
       </div>
 
@@ -528,7 +519,7 @@
          <!-- Beyond scientific world, he received an MBA fellowship from the <strong><a href="https://www.cdi.fr/en/" target="_blank">Collège des Ingénieurs</a></strong> and trained at the <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Cambridge Judge Business School</a></strong> with Santander Bank Scholarship.  -->
          In pursuit of impactful scientific and policy research, he gained practical experience both in academia at 
          <!-- <strong><a href="https://oxfordenergy.org" target="_blank">Oxford Institute for Energy Studies</a></strong>,  -->
-         <strong><a href="https://xfel.eu" target="_blank">European XFEL</a></strong>, <strong><a href="https://lmu.de/en" target="_blank">University of Munich</a></strong>, and <strong><a href="https://ecoledesponts.fr/" target="_blank">Polytechnic  Institute of Paris</a></strong>, and in industry at <strong>Toyota</strong>, <strong>Infineon</strong>, and <strong>Freudenberg</strong>. His academic journey began at Beijing Transport University, where he studied Materials Chemistry with an innovation scholarship, and trained at the <strong><a href="http://english.ipe.cas.cn/" target="_blank">Chinese Academy of Sciences</a></strong>.
+         <strong><a href="https://xfel.eu" target="_blank">European XFEL</a></strong>, <strong><a href="https://lmu.de/en" target="_blank">University of Munich</a></strong>, and <strong><a href="https://ecoledesponts.fr/" target="_blank">Polytechnic  Institute of Paris</a></strong>, and in industry at <strong>Toyota</strong>, <strong>Infineon</strong>, and <strong>Freudenberg</strong>. His academic journey began at <strong><a href="https://en.bjtu.edu.cn/" target="_blank">Beijing Transport University</a></strong>, where he studied Materials Chemistry with an innovation scholarship, and trained at the <strong><a href="http://english.ipe.cas.cn/" target="_blank">Chinese Academy of Sciences</a></strong>.
       </p>
 
 
