--- a/en.html
+++ b/en.html
@@ -334,9 +334,10 @@
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
         <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
         <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
-        <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
+        <div class="orange-dot" alt="Anhui" style="top: 54.9%; left: 90.5%;"></div>
         <div class="orange-dot" alt="DC" style="top: 44.7%; left: 19.05%;"></div>
         <div class="orange-dot" alt="Oxford" style="top: 26.7%; left: 46.9%;"></div>
+        <div class="orange-dot" alt="Frankfurt" style="top: 29.2%; left: 50.8%;"></div>
 
         <div class="red-dot" alt="Munich" style="top: 31.3%; left: 51.6%; z-index: 9999;"></div>
 
@@ -373,13 +374,24 @@
         <div class="tooltip" style="top:80%; left: 80%;">
           <h6><img src="images/flag_cn.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
-            Anqing, China</h6>
+            Anhui, China</h6>
         </div>
         <div class="tooltip" style="top:55%; left: 37%;">
           <h6><img src="images/flag_us.png" alt="Flagge"
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Washington DC, USA</h6>
         </div>
+        <div class="tooltip" style="top:35%; left: 41%;">
+          <h6><img src="images/flag_uk.png" alt="Flagge"
+              style="height:20px;display:inline-block;top:6px;position:relative;">
+            Oxford, UK</h6>
+        </div>
+        <div class="tooltip" style="top:35%; left: 76%;">
+          <h6><img src="images/flag_de.png" alt="Flagge"
+              style="height:20px;display:inline-block;top:6px;position:relative;">
+            Frankfurt am Main, Germany</h6>
+        </div>
+
       </div>
 
 
